# git_hub

./: 1.txt
MapReduceImagePredict/: .classpath  .project
MapReduceImagePredict/src/mr/io/: ImageInputFormat.java  ImageRecordReader.java  Result.java
MapReduceImagePredict/src/mr/jni/: Image_jni.java
MapReduceImagePredict/src/mr/mapreduce/: GetImageFromSequenceFiles.java  ImageRecognitionDriver.java
MapReduceImageUpload/: .classpath  .project
MapReduceImageUpload/src/mr/io/: ImageContainer.java  LoadImage.java  LocalFileNames.java  MergeImageContainer.java
MapReduceImageUpload/src/mr/upload/: UploadSequenceFile.java
mycode/caffe_code/badboy/: CMakeLists.txt  Config.h  badboy.h  badboyImpl.cpp  badboyImpl.h  badboy_jni.cpp  badboy_jni.h  image_predictor.cpp  image_predictor.h  main.cpp  result.h
mycode/caffe_code/predict/: CMakeLists.txt  Config.cpp  badboy.h  image_predictor.cpp  image_predictor.h  main.cpp  recognizer.cpp  recognizer.h
mycode/caffe_code/test_1/: CMakeLists.txt  mypredict.cpp
mycode/mr/jni/: ImageContainer.java  Image_jni.java  LoadImage.java  Result.java
mycode/mr/jni_cpp/: CMakeLists.txt  CMakeLists.txt~  mr_jni_Image_jni.cpp  mr_jni_Image_jni.h
