project(PREDICT)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
find_package(OpenCV REQUIRED)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
list(REMOVE_ITEM SRC_LIST "main.cpp")
include_directories(/usr/include/hdf5/serial)
link_directories(/usr/lib/x86_64-linux-gnu)		
#add_executable(predict ${SRC_LIST})
add_library(predict SHARED ${SRC_LIST})
target_link_libraries(predict caffe glog protobuf ${OpenCV_LIBS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DCPU_ONLY")
