project(PREDICT)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
#find_package(OpenCV REQUIRED)
include_directories(/usr/include/hdf5/serial)
link_directories(/usr/lib/x86_64-linux-gnu)		
add_executable(mypredict mypredict.cpp)
target_link_libraries(mypredict caffe glog protobuf)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DCPU_ONLY")
